tests/errors/runtime.NumberOutOfPermittedRange.res
4971686001999928811495395286003958158799180199238035119122039624929784892827826032702040415689327455938137756429705352304829984959844748840402820533688590392511431251018595048700814231003767708869076971755546723237578934123417714016936765899776

══╡ Type Error ╞══════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Erroneous type found

  Invalid operation pow
  Between: :integer
      and: :integer (big)

  ┃ File: tests/errors/runtime.NumberOutOfPermittedRange.art
  ┃ Line: 3
  ┃ 
  ┃    1 ║  print 2342342342423423534543534 ^ 10
  ┃    2 ║  ; something
  ┃    3 ║► print 234234 ^ 123123123123123123123 ; something else
  ┃    4 ║  ; something else